test/toolstest/effect_parser/valid/20_balanced_brackets_in_attr.def
/*
 * Valid: Attribute with balanced brackets and nested structures
 */

struct [[ge::params(type=TEST_BALANCED_BRACKETS, name="TestBalancedBrackets", values=[1, 2, 3], nested={a: 1, b: 2})]] TestBalancedBracketsParams {
    float value1;
    int value2;
};
