test/toolstest/effect_parser/invalid/03_missing_opening_brace.def
/*
 * Invalid: Missing opening brace
 */

struct [[ge::params(type=TEST_NO_OPEN_BRACE, name="TestNoOpenBrace")]] TestNoOpenBraceParams
    float value1;
    int value2;
};
